// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DeterministicArchivist find with no schema finds address history 1`] = `
[
  {
    "addresses": [
      "db8af7b3084f5a03589af4915e37cbeb3f19afb0",
    ],
    "payload_hashes": [
      "1137543b5805a18e8f39cb7debe49ddf58a1de00c46ed7310baf7ebcfdf435a2",
      "aa36451ef0079af6cc2f86eaa05c7a93fb3c92098e18d0ce857e9e3072b32a85",
    ],
    "payload_schemas": [
      "network.xyo.debug",
      "network.xyo.test",
    ],
    "previous_hashes": [
      "d45ace1ac2f9e5d04dbf295850d47427ecd43f2e043c4a8326db2f8bf547dd38",
    ],
    "schema": "network.xyo.boundwitness",
    "timestamp": 123456789000,
  },
  {
    "nonce": 3,
    "schema": "network.xyo.debug",
  },
  {
    "nonce": 4,
    "schema": "network.xyo.test",
  },
  {
    "addresses": [
      "db8af7b3084f5a03589af4915e37cbeb3f19afb0",
    ],
    "payload_hashes": [
      "1c9033e467d6877e2c84a70b29212a585bd6fd448bccfcc12adf0505c18984f6",
    ],
    "payload_schemas": [
      "network.xyo.test",
    ],
    "previous_hashes": [
      "d2fbc2df7cd956a2a9461792c9ffad4faf2ec290743832ff913582453e0dd320",
    ],
    "schema": "network.xyo.boundwitness",
    "timestamp": 123456789000,
  },
  {
    "nonce": 2,
    "schema": "network.xyo.test",
  },
  {
    "addresses": [
      "db8af7b3084f5a03589af4915e37cbeb3f19afb0",
    ],
    "payload_hashes": [
      "15b8d0e30ca5aa96ca6cc9e1528c075aec88cd3f2c3eb0394fde647eb4bf4547",
    ],
    "payload_schemas": [
      "network.xyo.debug",
    ],
    "previous_hashes": [
      null,
    ],
    "schema": "network.xyo.boundwitness",
    "timestamp": 123456789000,
  },
  {
    "nonce": 1,
    "schema": "network.xyo.debug",
  },
]
`;

exports[`DeterministicArchivist find with schema for BoundWitness finds multiple boundwitness 1`] = `
[
  {
    "addresses": [
      "db8af7b3084f5a03589af4915e37cbeb3f19afb0",
    ],
    "payload_hashes": [
      "1137543b5805a18e8f39cb7debe49ddf58a1de00c46ed7310baf7ebcfdf435a2",
      "aa36451ef0079af6cc2f86eaa05c7a93fb3c92098e18d0ce857e9e3072b32a85",
    ],
    "payload_schemas": [
      "network.xyo.debug",
      "network.xyo.test",
    ],
    "previous_hashes": [
      "d45ace1ac2f9e5d04dbf295850d47427ecd43f2e043c4a8326db2f8bf547dd38",
    ],
    "schema": "network.xyo.boundwitness",
    "timestamp": 123456789000,
  },
  {
    "addresses": [
      "db8af7b3084f5a03589af4915e37cbeb3f19afb0",
    ],
    "payload_hashes": [
      "1c9033e467d6877e2c84a70b29212a585bd6fd448bccfcc12adf0505c18984f6",
    ],
    "payload_schemas": [
      "network.xyo.test",
    ],
    "previous_hashes": [
      "d2fbc2df7cd956a2a9461792c9ffad4faf2ec290743832ff913582453e0dd320",
    ],
    "schema": "network.xyo.boundwitness",
    "timestamp": 123456789000,
  },
  {
    "addresses": [
      "db8af7b3084f5a03589af4915e37cbeb3f19afb0",
    ],
    "payload_hashes": [
      "15b8d0e30ca5aa96ca6cc9e1528c075aec88cd3f2c3eb0394fde647eb4bf4547",
    ],
    "payload_schemas": [
      "network.xyo.debug",
    ],
    "previous_hashes": [
      null,
    ],
    "schema": "network.xyo.boundwitness",
    "timestamp": 123456789000,
  },
]
`;

exports[`DeterministicArchivist find with schema for BoundWitness finds single boundwitness 1`] = `
[
  {
    "addresses": [
      "db8af7b3084f5a03589af4915e37cbeb3f19afb0",
    ],
    "payload_hashes": [
      "15b8d0e30ca5aa96ca6cc9e1528c075aec88cd3f2c3eb0394fde647eb4bf4547",
    ],
    "payload_schemas": [
      "network.xyo.debug",
    ],
    "previous_hashes": [
      null,
    ],
    "schema": "network.xyo.boundwitness",
    "timestamp": 123456789000,
  },
]
`;

exports[`DeterministicArchivist find with schema for Payload finds multiple payloads 1`] = `
[
  {
    "nonce": 3,
    "schema": "network.xyo.debug",
  },
  {
    "nonce": 1,
    "schema": "network.xyo.debug",
  },
]
`;

exports[`DeterministicArchivist find with schema for Payload finds single payload 1`] = `
[
  {
    "nonce": 3,
    "schema": "network.xyo.debug",
  },
]
`;

exports[`DeterministicArchivist get gets multiple boundwitness 1`] = `
[
  {
    "addresses": [
      "10ca1959336ea208bcdf00dd6d6637aec91a4c0e",
    ],
    "payload_hashes": [
      "15b8d0e30ca5aa96ca6cc9e1528c075aec88cd3f2c3eb0394fde647eb4bf4547",
    ],
    "payload_schemas": [
      "network.xyo.debug",
    ],
    "previous_hashes": [
      null,
    ],
    "schema": "network.xyo.boundwitness",
    "timestamp": 123456789000,
  },
  {
    "addresses": [
      "10ca1959336ea208bcdf00dd6d6637aec91a4c0e",
    ],
    "payload_hashes": [
      "1c9033e467d6877e2c84a70b29212a585bd6fd448bccfcc12adf0505c18984f6",
    ],
    "payload_schemas": [
      "network.xyo.test",
    ],
    "previous_hashes": [
      "58c138dd2aab7bd78bd2c3d80bebf900d3f99f506e201f1f0ace1d473fc45d76",
    ],
    "schema": "network.xyo.boundwitness",
    "timestamp": 123456789000,
  },
  {
    "addresses": [
      "10ca1959336ea208bcdf00dd6d6637aec91a4c0e",
    ],
    "payload_hashes": [
      "1137543b5805a18e8f39cb7debe49ddf58a1de00c46ed7310baf7ebcfdf435a2",
      "aa36451ef0079af6cc2f86eaa05c7a93fb3c92098e18d0ce857e9e3072b32a85",
    ],
    "payload_schemas": [
      "network.xyo.debug",
      "network.xyo.test",
    ],
    "previous_hashes": [
      "c5e4a2513ea22a7ccfa359207b4d83af68688dca8c9a3f5d39106ba6e599b481",
    ],
    "schema": "network.xyo.boundwitness",
    "timestamp": 123456789000,
  },
]
`;

exports[`DeterministicArchivist get gets multiple payloads 1`] = `
[
  {
    "nonce": 1,
    "schema": "network.xyo.debug",
  },
  {
    "nonce": 2,
    "schema": "network.xyo.test",
  },
  {
    "nonce": 3,
    "schema": "network.xyo.debug",
  },
]
`;

exports[`DeterministicArchivist get gets single boundwitness 1`] = `
[
  {
    "addresses": [
      "10ca1959336ea208bcdf00dd6d6637aec91a4c0e",
    ],
    "payload_hashes": [
      "15b8d0e30ca5aa96ca6cc9e1528c075aec88cd3f2c3eb0394fde647eb4bf4547",
    ],
    "payload_schemas": [
      "network.xyo.debug",
    ],
    "previous_hashes": [
      null,
    ],
    "schema": "network.xyo.boundwitness",
    "timestamp": 123456789000,
  },
]
`;

exports[`DeterministicArchivist get gets single payload 1`] = `
[
  {
    "nonce": 1,
    "schema": "network.xyo.debug",
  },
]
`;

exports[`DeterministicArchivist insert inserts multiple payloads 1`] = `
[
  {
    "_client": "js",
    "_hash": "92ba7e7d3931ee709f84f7df111e2107cbf277db364bc7ca623b4b9aba8fb10a",
    "_signatures": [
      "649fc748389adb1b35b9a5fe4aec21a2695f00843e4e8b558cf1922166ff3c9736679e7ccc53a188abe8e4ab7eb4f26e68a8180f9a0399e5e9060d0c673465c3",
      "1cd3ba497ed392c17d11d5bef776416c73d662e608440be99ab5615889f84b0045c7e78c8260eb8b44846379ec34aa0884a50b028d6a1b429d862525a1302270",
    ],
    "_timestamp": 123456789002,
    "addresses": [
      "daddab0e0468c920bd5aff4b14fd94c20a598055",
      "babe1d55e51844ea1cdc6b4dcbb649bb08e3cc3c",
    ],
    "payload_hashes": [
      "2ec49c1f19dd568c68c31bdfe64ae26f3ad57bb48eeae55fef7b5742706747dd",
    ],
    "payload_schemas": [
      "network.xyo.boundwitness",
    ],
    "previous_hashes": [
      "2ec49c1f19dd568c68c31bdfe64ae26f3ad57bb48eeae55fef7b5742706747dd",
      "512921f04a3dc4e965375810f84e815e2bad442fccb3b210bc40c796596329bb",
    ],
    "schema": "network.xyo.boundwitness",
    "timestamp": 123456789002,
  },
  {
    "_client": "js",
    "_hash": "2ec49c1f19dd568c68c31bdfe64ae26f3ad57bb48eeae55fef7b5742706747dd",
    "_signatures": [
      "c6a3b3895e46540e6ce0239a2b6c228b4b618be3f4430e6d18716430b83698b83cdc70ad9d3a605ee50603bd6843da618804d10e6fd76fdc77f136bae1d307e3",
    ],
    "_timestamp": 123456789002,
    "addresses": [
      "daddab0e0468c920bd5aff4b14fd94c20a598055",
    ],
    "payload_hashes": [
      "a575d6d967e946260f0a58c84e5da69800b8ffb3d7e5f93aaf3e466eaf0c25b6",
      "e307ab9ba8ea876135ae22ff47114513cf7fefe024dab21d89d8584378df6b11",
      "1137543b5805a18e8f39cb7debe49ddf58a1de00c46ed7310baf7ebcfdf435a2",
      "aa36451ef0079af6cc2f86eaa05c7a93fb3c92098e18d0ce857e9e3072b32a85",
      "4e2d335e7f54334b10e30706546f820a750974381586ec9aa2eca6f916249b25",
    ],
    "payload_schemas": [
      "network.xyo.boundwitness.query",
      "network.xyo.boundwitness",
      "network.xyo.debug",
      "network.xyo.test",
      "network.xyo.query.archivist.insert",
    ],
    "previous_hashes": [
      "512921f04a3dc4e965375810f84e815e2bad442fccb3b210bc40c796596329bb",
    ],
    "schema": "network.xyo.boundwitness",
    "timestamp": 123456789002,
  },
]
`;

exports[`DeterministicArchivist insert inserts single payload 1`] = `
[
  {
    "_client": "js",
    "_hash": "d5a48cd4e28e9a2e849fdbad1016f8bcbb540d45e3e49440b493e48032a8e644",
    "_signatures": [
      "dd668eeff4f68a5b1bf983a891a9339850ee7514dac80efbdff8140ce3f0b2cf0057fa2b39200c8bb13814777b2281f882605bf63bdb7453887f8427507c5d1d",
      "d2cacfca3e0960e73430fd109801a0bbbd175231ca35a878bbd90cba5c7149d319d0c3906c3e196dc5f64901f7a4956c1da311560c5c756b10f99ef57e1983bf",
    ],
    "_timestamp": 123456789000,
    "addresses": [
      "daddab0e0468c920bd5aff4b14fd94c20a598055",
      "babe1d55e51844ea1cdc6b4dcbb649bb08e3cc3c",
    ],
    "payload_hashes": [
      "8b8169db565dbe5cf109c71b8c86af9063a7cf72a080b71aad54b522c181789a",
    ],
    "payload_schemas": [
      "network.xyo.boundwitness",
    ],
    "previous_hashes": [
      "8b8169db565dbe5cf109c71b8c86af9063a7cf72a080b71aad54b522c181789a",
      null,
    ],
    "schema": "network.xyo.boundwitness",
    "timestamp": 123456789000,
  },
  {
    "_client": "js",
    "_hash": "8b8169db565dbe5cf109c71b8c86af9063a7cf72a080b71aad54b522c181789a",
    "_signatures": [
      "db888ff50742f10729f067a17114a8098a860a903a845b097e811eff92435bdf1516a6203b488bfe3d384b04a718f7df088c89f9405d63a03f8696bdf767a66b",
    ],
    "_timestamp": 123456789000,
    "addresses": [
      "daddab0e0468c920bd5aff4b14fd94c20a598055",
    ],
    "payload_hashes": [
      "f8eecd9529d57e58a3286dd52708db867c84a03d9e79c3bd9f1c3d9acc2068b7",
      "58c138dd2aab7bd78bd2c3d80bebf900d3f99f506e201f1f0ace1d473fc45d76",
      "15b8d0e30ca5aa96ca6cc9e1528c075aec88cd3f2c3eb0394fde647eb4bf4547",
      "81b707afc5742a5501a4fac4ad56132928ce711de36de7aeda936e08066cfcad",
    ],
    "payload_schemas": [
      "network.xyo.boundwitness.query",
      "network.xyo.boundwitness",
      "network.xyo.debug",
      "network.xyo.query.archivist.insert",
    ],
    "previous_hashes": [
      null,
    ],
    "schema": "network.xyo.boundwitness",
    "timestamp": 123456789000,
  },
]
`;
